# pyplasmod

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Dockerfile  LICENSE  Makefile  NOTICE  README-Plasmod.md  README.md  README.zh-CN.md  _version_helper.py  check_proto_product.sh  gateway.go  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  general-question.yaml
.github/workflows/: auto-cherrypick.yml  publish-pypi.yml  update-milvus-pymilvus-dev.yml
docs/: EMBEDDING.md  README.md  SDK.md
docs/integrations/: milvus_plasmod_mapping.md
docs/plans/: README.md  pymilvus-001-global-client-design.md  pymilvus-002-connection-manager-design.md  pyplasmod-000-template.md  pyplasmod-001-http-sdk-design.md  pyplasmod-002-gateway-tier-b-shortcuts-design.md  pyplasmod-003-sdk-usage-guide.md
docs/zh-CN/: EMBEDDING.md  README.md  SDK.md
examples/: alias.py  alter.py  array_partial_update.py  async_DDL_test.py  async_optimize_example.py  async_previledge_test.py  batch_ingest.py  compact.py  customize_schema.py  customize_schema_auto_id.py  customize_schema_id.py  database.py  embedding_cpu_gpu.py  external_collection_example.py  flush.py  function_edit.py  get_server_version.py  http_quickstart.py  hybrid_search.py  index.py  index_params.py  ingest_fbin.py  int8_example.py  langchain_quickstart.py  minhash_function_example.py  non_ascii_encode.py  nullable_vector.py  partition.py  privilege_group.py  query_group_by.py  query_order_by.py  rbac.py  resource_group.py  search_aggregation.py  search_group_by.py  search_order_by.py  search_with_template_expression.py  simple.py  simple_async.py  simple_async2.py  (+14 more)
examples/bulk_import/: bulk_writer_all_types.py  example_bulkinsert_json.py  example_bulkinsert_parquet.py  example_bulkwriter_stage.py  example_bulkwriter_volume.py  example_volume_file_manager.py  example_volume_manager.py
examples/cert/: example_tls1.py  example_tls2.py
examples/full_text_search/: bm25.py  language_identifier.py  multi_analyzer.py
examples/iterator/: iterator.py
examples/manage_plasmod_client/: how_to_manage_plasmod_client.md  manage_plasmod_client.py
examples/orm_deprecated/: bitmap_index_example.py  collection.py  database.py  example.py  example_group_by.py  example_index.py  hello_cost.py  hello_milvus.ipynb  hello_milvus.py  hello_milvus_delete.py  hello_text_embedding.py  hello_text_match.py  inverted_index_example.py  iterator.py  nullable_and_default_value.py  partition.py  query_group_by_orm.py  rbac.py  resource_group.py  resource_group_declarative_api.py  role_and_privilege.py  search_with_template_expression.py  user.py
examples/plasmod_model/: hello_model.py
pyplasmod/: __init__.py  __main__.py  _interop_names.py  batch.py  client.py  decorators.py  easy.py  exceptions.py  package_help.py  settings.py
pyplasmod/bulk_writer/: __init__.py  buffer.py  bulk_import.py  bulk_writer.py  constants.py  endpoint_resolver.py  local_bulk_writer.py  remote_bulk_writer.py  validators.py  volume_bulk_writer.py  volume_file_manager.py  volume_manager.py  volume_restful.py
pyplasmod/client/: __init__.py  abstract.py  async_grpc_handler.py  asynch.py  call_context.py  check.py  connection_manager.py  constants.py  embedding_list.py  entity_helper.py  field_ops.py  global_topology.py  grpc_handler.py  prepare.py  search_aggregation.py  search_iterator.py  ts_utils.py  (+3 more)
tests/: README.md  conftest.py  test_async_flush.py  test_async_optimize_task.py  test_async_plasmod_client.py  test_async_plasmod_client_ops.py  test_async_plasmod_client_reuse.py  test_asynch.py  test_batch.py  test_batch_ingest.py  test_bulk_import.py  test_bulk_writer_buffer.py  test_bulk_writer_stage.py  test_bulk_writer_validators.py  test_bytes_vector_search.py  test_cache.py  test_check.py  test_client_abstract.py  test_client_entity_helper.py  test_client_types.py  test_client_validators.py  test_collection_ts_cache.py  test_connection_manager.py  test_create_connection.py  test_data_upload.py  test_decorators.py  test_docker_bootstrap.py  test_easy_plasmod.py  test_embedding.py  test_embedding_list.py  test_global_topology.py  test_grpc_channel_options.py  test_grpc_error_diagnostics.py  test_http_deploy.py  test_http_sdk.py  test_interceptors.py  test_langchain.py  test_local_bulk_writer.py  test_minhash_function.py  test_optimize_task.py  (+11 more)
(+118 files in other folders)
