[build-system]
requires = [
  "setuptools>=64",
  "setuptools<=75.3.2; python_version == '3.8'",
  "wheel",
  "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyplasmod*"]

[project]
name = "pyplasmod"
authors = [{ name = "CodeSoul-co" }]
requires-python = ">=3.8"
description = "Python HTTP SDK for the Plasmod agent-native storage stack (Tier A + binary RPC)."
readme = "README.md"
dependencies = [
    "requests>=2.20.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/CodeSoul-co/Plasmod"
repository = "https://github.com/CodeSoul-co/Plasmod"

[project.optional-dependencies]
dev = [
    "pytest>=5.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.9,<1",
    "black",
]

[tool.setuptools_scm]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = [
    "E501",
    # PEP 604 (X | None) requires Python 3.10+; package supports 3.8+
    "UP045",
]
show-fixes = true
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]
line-length = 100
target-version = "py38"

[tool.coverage.run]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
