[build-system]
requires = [
  "setuptools>=64",
  "setuptools<=75.3.2; python_version == '3.8'",
  "wheel",
  "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyplasmod*"]

[project]
name = "pyplasmod"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "CodeSoul-co" }]
requires-python = ">=3.8"
description = "Python HTTP SDK for the Plasmod agent-native storage stack (Tier A + Tier B JSON + binary RPC). Requires a running Plasmod gateway."
readme = "README.md"
keywords = ["plasmod", "vector", "agent", "http", "sdk", "memory", "embedding"]
dependencies = [
    "requests>=2.20.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/CodeSoul-co/pyplasmod"
Repository = "https://github.com/CodeSoul-co/pyplasmod"
Documentation = "https://github.com/CodeSoul-co/pyplasmod/blob/main/docs/SDK.md"
"Bug Tracker" = "https://github.com/CodeSoul-co/pyplasmod/issues"
"Plasmod (server)" = "https://github.com/CodeSoul-co/Plasmod"

[project.optional-dependencies]
dev = [
    "pytest>=5.3.4",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.9,<1",
    "black",
]
langchain = [
    "langchain-core>=0.1.0",
]
all = [
    "langchain-core>=0.1.0",
]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = [
    "E501",
    # PEP 604 (X | None) requires Python 3.10+; package supports 3.8+
    "UP045",
]
show-fixes = true
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]
line-length = 100
target-version = "py38"

[tool.coverage.run]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
